--- a/src/main/resources/templates/charge/mypage_ogushi.html
+++ b/src/main/resources/templates/charge/mypage_ogushi.html
@@ -5,6 +5,41 @@
 <title>Insert title here</title>
 </head>
 <body>
+<h3>All ALUBUM</h3>
+	<th:block th:each="image : ${imgList}">
+		<a th:href="@{/show/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}"> <img
+			th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
+		</a>
+		<p th:text="${#dates.format(image.date,'yyyy年MM月dd日')}"></p>
 
+
+</th:block>
+
+
+		<!-- ページネーション、ページャー -->
+		<div th:if="${totalPage >= 2}">
+			<ul>
+				<!-- 前のページリンク -->
+				<th:block th:switch="${page}">
+					<li th:case="1"><a href="" class="noevent">Prev</a></li>
+					<li th:case="*"><a th:href="@{/mypage(page=${page-1})}">Prev</a>
+					</li>
+				</th:block>
+				<!-- ページ番号 -->
+				<th:block th:each="index:${#numbers.sequence(1,totalPage)}">
+					<th:block th:switch="${index}">
+						<li th:case="${page}"><a href="" class="noevent">[[${index}]]</a></li>
+						<li th:case="*"><a th:href="@{/mypage(page=${index})}">[[${index}]]</a></li>
+					</th:block>
+				</th:block>
+				<!-- 次のページリンク -->
+				<th:block th:switch="${page}">
+					<li th:case="${totalPage}"><a href="" class="noevent">Next</a>
+					</li>
+					<li th:case="*"><a th:href="@{/mypage(page=${page+1})}">Next</a>
+					</li>
+				</th:block>
+			</ul>
+		</div>
 </body>
 </html>
