--- a/src/main/resources/templates/charge/show_ogushi.html
+++ b/src/main/resources/templates/charge/show_ogushi.html
@@ -5,6 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+<th:block th:each="image : ${imageList}">
+	<img th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
+	<p th:text="${#dates.format(image.date,'yyyy年MM月dd日')}"></p>
+<br />
+	<a th:href="@{/edit/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}">編集</a>
+	<a th:href="@{/delete/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}">削除</a>
+	</th:block>
 </body>
 </html>
