--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,18 +11,18 @@
 <link rel="stylesheet" th:href="@{/css/reset.css}">
 </head>
 <body>
-	<header>
-		<div class="inner">
-			<h1>
-				<a href="">ロゴ</a>
-			</h1>
-			<nav class="navigation">
-				<ul role='list'>
-					<li><a th:href="@{/ }">トップに戻る</a></li>
-					<li><a th:href="@{/user/login}">ログイン</a></li>
-				</ul>
-			</nav>
-		</div>
+<header>
+	<div class="inner">
+		<h1>
+			<a href="">ロゴ</a>
+		</h1>
+		<nav class="navigation">
+			<ul role='list'>
+				<li><a th:href="@{/user/register}">新規会員登録</a></li>
+				<li><a th:href="@{/user/login}">ログイン</a></li>
+			</ul>
+		</nav>
+	</div>
 	</header>
 	<th:block th:object="${user}">
 		<p th:errors="*{loginId}"></p>
@@ -43,8 +43,7 @@
 		<p>
 			<input type="file" name="upload" />
 		</p>
-		<img th:if="${user.fileName ne null}" th:src="@{/uploads/{name}(name=${user.fileName})}" alt="" />
-	<img th:unless="${user.fileName ne null}" th:src="@{/images/macho_cat.png}" alt="Default Image" />
+		<img th:src="@{/uploads/{name}(name=${user.fileName})}" alt="" />
 		<p>
 			<input type="submit" value="登録" />
 		</p>
