--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -46,16 +46,7 @@ a {
 
 
 	<h2>記録を見る</h2>
-	
-	<!-- 	体重・BMI表示 -->
-	<th:block th:object="${weightBmi}">	
-		<table border="1">
-			<tr><th>日付</th><td>[[*{date}]]</td></tr>
-			<tr><th>体重</th><td>[[*{userWeight}]]</td></tr>
-			<tr><th>BMI</th><td>[[*{bmi}]]</td></tr>
-			<tr><th>適正体重</th><td>[[*{healthyWeight}]]</td></tr>
-		</table>
-	</th:block>
+
 
 
 	<h3>All ALUBUM</h3>
@@ -98,5 +89,11 @@ a {
 		<small>Copyright 2024 TRECORD</small>
 	</footer>
 
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-labels@1.1.0/build/chartjs-plugin-labels.min.js" 
+	integrity="sha256-6ZoPHXM6Qs2Sv5ev5NvrJ0NCoZuXh1jwt50q3hNj/OY=" crossorigin="anonymous"></script>
+	<script th:src="@{/js/script.js}"></script>
 </body>
 </html>
