--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -3,7 +3,7 @@ html {
   font-size: 62.5%;
 }
 :root {
-  --main-bg-color: #35aaad;
+  --main-bg-color: #80cbf7;
   --accent-color: #fdd178;
   --text-color: #333;
   --main-gradation: linear-gradient(90deg, rgb(174 255 206), rgb(160 224 255));
@@ -14,16 +14,19 @@ body {
   line-height: 1.5;
   font-family: "メイリオ", "Meiryo", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", Sans-Serif;
   background: #fff;
+  height: 100vh;
 }
 a {
   text-decoration: none;
 }
-
 .inner {
   width: 1100px;
   margin: 0 auto;
 }
 
+header {
+  background: #fff;
+}
 header .inner {
   height: 60px;
   display: flex;
@@ -34,7 +37,7 @@ header h1 {
   line-height: 1.8;
 }
 header .logo img {
-	width: 160px;
+  width: 160px;
 }
 header .navigation {
   width: 50%;
@@ -60,10 +63,10 @@ header .navigation ul li:hover {
   letter-spacing: 0.5rem;
 }
 header .navigation ul li:nth-child(1) a {
-  border: 1px solid #fbdf07;
+  background: #fbdf07;
 }
 header .navigation ul li:nth-child(2) a {
-  background: #fbdf07;
+  border: 1px solid #fbdf07;
 }
 
 main {
@@ -84,16 +87,17 @@ main h2 .font-en {
 
 .support-menu {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   margin-bottom: 20px;
 }
 .support-menu_btn {
   background: #80cbf7;
   font-size: 1.8rem;
   font-weight: bold;
-  padding: 35px;
+  padding: 30px;
+  margin: 0 2%;
   color: var(--text-color);
-  width: 30%;
+  width: 40%;
   text-align: center;
   position: relative;
   z-index: 1;
@@ -119,26 +123,27 @@ main h2 .font-en {
   content: "";
   position: absolute;
   z-index: 2;
-  width: 90%;
+  width: 65%;
   height: 100%;
-  top: -20%;
-  left: 0;
-  opacity: 0.6;
+  top: -15%;
+  left: 2%;
   background-repeat: no-repeat;
   background-size: 50%;
+  opacity: 0.8;
 }
 .support-menu_btn.count::before {
   background-image: url(../images/menu-icon1.png);
 }
 .support-menu_btn.weight::before {
   background-image: url(../images/menu-icon2.png);
+  background-size: 45%;
+  top: -5%;
 }
 .support-menu_btn.diagnosis::before {
   background-image: url(../images/menu-icon3.png);
 }
 
 footer {
-  position: -webkit-sticky;
   position: sticky;
   top: 100vh;
   text-align: center;
@@ -147,12 +152,11 @@ footer {
 }
 
 
-/*----- topスライドここから -----*/
+/*----- topスライド -----*/
 .splide__slide img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .splide__track--nav > .splide__list > .splide__slide.is-active {
   opacity: 0.6;
