--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -33,6 +33,10 @@ a {
 	href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
 <link rel="stylesheet" th:href="@{/css/common.css}">
 <link rel="stylesheet" th:href="@{/css/reset.css}">
+<!-- カレンダー機能リンク -->
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
+<link rel="stylesheet" th:href="@{/}">
 
 </head>
 <body>
@@ -43,7 +47,24 @@ a {
 	<h2>
 		<a th:href="@{/record}">記録をする</a>
 	</h2>
-
+<form action="show" th:object="${calendar}">
+		<input type="hidden" value="" name="date2" id="date2" /> <input type="submit" />
+	</form>
+	<div class="date"></div>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script>
+	
+$('.date').datepicker({
+	dateFormat: "yy/mm/dd",
+	onSelect: (date, inst)=>{
+        $("#date2").val(date);
+        
+    }
+});
+</script>
 
 	<h2>記録を見る</h2>
 
