--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -19,8 +19,8 @@ img {
 	<img th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
 	<p th:text="${#dates.format(image.date,'yyyy年MM月dd日')}"></p>
 <br />
-	<a th:href="@{/edit/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}">編集</a>
-	<a th:href="@{/delete/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}">削除</a>
+	<p><a th:href="@{/edit/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}">編集</a></p>
+	<p><a th:href="@{/delete/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}">削除</a></p>
 	</th:block>
 	
 	
