--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -29,14 +29,13 @@ a {
 <link
 	href="https://fonts.googleapis.com/css2?family=Prompt:wght@700&display=swap"
 	rel="stylesheet" />
-<link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
-<link rel="stylesheet" th:href="@{/css/common.css}">
-<link rel="stylesheet" th:href="@{/css/reset.css}">
+	
 <!-- カレンダー機能リンク -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
-<link rel="stylesheet" th:href="@{/}">
+
+<link rel="stylesheet" th:href="@{/css/reset.css}">
+<link rel="stylesheet" th:href="@{/css/common.css}">
 
 </head>
 <body>
@@ -44,68 +43,58 @@ a {
 	<h1>MY PAGE</h1>
 	<a th:href="@{/user/setting/{id}(id=${session.user.userId})}">設定</a>
 	<a th:href="@{/user/logout}">ログアウト</a>
+	
 	<h2>
-		<a th:href="@{/record}">記録をする</a>
+		<span class="font-en"><a th:href="@{/record}">RECORD</a></span><br>記録をする
 	</h2>
-<form action="show" th:object="${calendar}">
+	
+
+	<h2>
+	     <span class="font-en">CHECK</span><br>記録を見る
+	</h2>
+     
+     <form action="show" th:object="${calendar}">
 		<input type="hidden" value="" name="date2" id="date2" /> <input type="submit" />
 	</form>
 	<div class="date"></div>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-	<script>
+
+
+	<h3>All View</h3>
 	
-$('.date').datepicker({
-	dateFormat: "yy/mm/dd",
-	onSelect: (date, inst)=>{
-        $("#date2").val(date);
-        
-    }
-});
-</script>
-
-	<h2>記録を見る</h2>
-
-
-
-	<h3>All ALUBUM</h3>
 	<th:block th:each="image : ${imgList}">
-		<a th:href="@{/show/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}"> <img
-			th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
+		<a th:href="@{/show/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}"> 
+			<img th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
 		</a>
 		<p th:text="${#dates.format(image.date,'yyyy年MM月dd日')}"></p>
-
-
-</th:block>
-
+     </th:block>
 
 		<!-- ページネーション、ページャー -->
-		<div th:if="${totalPage >= 2}">
-			<ul>
-				<!-- 前のページリンク -->
-				<th:block th:switch="${page}">
-					<li th:case="1"><a href="" class="noevent">Prev</a></li>
-					<li th:case="*"><a th:href="@{/mypage(page=${page-1})}">Prev</a>
-					</li>
+	<div th:if="${totalPage >= 2}">
+		<ul>
+			<!-- 前のページリンク -->
+			<th:block th:switch="${page}">
+				<li th:case="1"><a href="" class="noevent">Prev</a></li>
+				<li th:case="*"><a th:href="@{/mypage(page=${page-1})}">Prev</a></li>
+			</th:block>
+			<!-- ページ番号 -->
+			<th:block th:each="index:${#numbers.sequence(1,totalPage)}">
+				<th:block th:switch="${index}">
+					<li th:case="${page}"><a href="" class="noevent">[[${index}]]</a></li>
+					<li th:case="*"><a th:href="@{/mypage(page=${index})}">[[${index}]]</a></li>
 				</th:block>
-				<!-- ページ番号 -->
-				<th:block th:each="index:${#numbers.sequence(1,totalPage)}">
-					<th:block th:switch="${index}">
-						<li th:case="${page}"><a href="" class="noevent">[[${index}]]</a></li>
-						<li th:case="*"><a th:href="@{/mypage(page=${index})}">[[${index}]]</a></li>
-					</th:block>
-				</th:block>
-				<!-- 次のページリンク -->
-				<th:block th:switch="${page}">
-					<li th:case="${totalPage}"><a href="" class="noevent">Next</a>
-					</li>
-					<li th:case="*"><a th:href="@{/mypage(page=${page+1})}">Next</a>
-					</li>
-				</th:block>
-			</ul>
-		</div>
+			</th:block>
+			<!-- 次のページリンク -->
+			<th:block th:switch="${page}">
+				<li th:case="${totalPage}"><a href="" class="noevent">Next</a></li>
+				<li th:case="*"><a th:href="@{/mypage(page=${page+1})}">Next</a></li>
+			</th:block>
+		</ul>
+	</div>
+		
+	
+	<h3>Comparison</h3>
+		
+	
 	<footer>
 		<small>Copyright 2024 TRECORD</small>
 	</footer>
@@ -116,5 +105,17 @@ $('.date').datepicker({
 	<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-labels@1.1.0/build/chartjs-plugin-labels.min.js" 
 	integrity="sha256-6ZoPHXM6Qs2Sv5ev5NvrJ0NCoZuXh1jwt50q3hNj/OY=" crossorigin="anonymous"></script>
 	<script th:src="@{/js/script.js}"></script>
+
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script>	
+       $('.date').datepicker({
+	   dateFormat: "yy/mm/dd",
+	   onSelect: (date, inst)=>{
+       $("#date2").val(date);
+            }
+       });
+     </script>
+     
 </body>
 </html>
