--- a/src/main/resources/templates/recordDone.html
+++ b/src/main/resources/templates/recordDone.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 	<h1>登録完了</h1>
-	
+
 	<p><a th:href="@{/record_aramaki}">もう一度登録する</a></p>
+	<p><a th:href="@{/mypage}">マイページへ</a></p>
 </body>
 </html>
