--- a/src/main/resources/templates/record.html
+++ b/src/main/resources/templates/record.html
@@ -14,24 +14,58 @@
 <body>
 
 	<h1>トレーニング内容を記録する</h1>
-	
-	
 
-	<p>画像を選択してください</p>
-	<br />
-	<form action="" method="post" enctype="multipart/form-data"
-		th:object="${image}">
-		<input type="file" name="upload" />
+	<form action="" method="post" th:object="${machineSetCount}">
 
-		<p>[[${msg}]]</p>
+<!-- ユーザーID： -->
+			<input type="hidden" th:field="*{userId}" />
 
-		<p>
-			今日の一言： <input type="text" th:field="*{memo}" />
-		</p>
-		<input type="submit"
-			value="upload" />
+			<p>日付：
+				<input type="date" th:field="*{date}" />
+			</p>
 
-	</form>
+			<p>筋トレマシン名：
+				<select th:field="*{machineId}" >
+					<option th:each="machine : ${machine}" th:value="${machine.machineId}">
+						[[${machine.machineName}]]
+					</option>
+				</select>
+			</p>
+
+			<p>重量：
+				<select th:field="*{machineWeight}">
+					<option th:each="i : ${#numbers.sequence(1, weight)}" th:value="${i}">
+						[[${i}]]
+					</option>
+				</select>
+				kg
+			</p>
+
+<!-- 時間があったら・・・input要素とdatalist要素で「テキスト入力」と「入力候補からの選択」の両方が可能なフォームを作成 -->
+			<p>1セットあたりの回数：
+				<select th:field="*{machineCount}">
+<!-- #numbers.sequence　繰り返しの最初の数と最後の数を記載 -->
+					<option th:each="i : ${#numbers.sequence(1, numCount)}" th:value="${i}">
+						[[${i}]]
+					</option>
+				</select>
+				回
+			</p>
+
+			<p>セット数：
+				<select th:field="*{sets}">
+					<th:block  th:each="i : ${#numbers.sequence(1, numSet)}" th:value="${i}">
+						<option th:value="${i}">
+							[[${i}]]
+						</option>
+					</th:block>
+				</select>
+				セット
+			</p>
+
+			<p><input type="submit" th:value="記録する" /></p>
+
+		</form>
 
 	<p>
 		<a href="mypage">My Pageへ</a>
