--- a/src/main/resources/templates/setting.html
+++ b/src/main/resources/templates/setting.html
@@ -15,11 +15,11 @@
 <header>
 		<div class="inner">
 			<h1>
-				<a href="">ロゴ</a>
+				<a th:href="@{/ }" class="logo"><img th:src="@{images/ttl_logo.png}"></a>
 			</h1>
 			<nav class="navigation">
 				<ul role='list'>
-					<li><a th:href="@{/user/register}">新規会員登録</a></li>
+					<li><a th:href="@{/ }">トップに戻る</a></li>
 					<li><a th:href="@{/user/login}">ログイン</a></li>
 				</ul>
 			</nav>
@@ -36,8 +36,11 @@
 		<p>
 			身長:[[*{userHeight}]]
 		</p>
-		<img th:src="@{/uploads/{name}(name=${user.fileName})}" alt="" />
-		
+		<p><img th:if="${user.fileName ne null}"
+			th:src="@{/images/macho_cat.png}" alt="Default Image" /> 
+		<img th:unless="${user.fileName ne null}"
+			th:src="@{/uploads/{name}(name=${user.fileName})}" alt="" />
+			</p>
 		
 
 		<p>
